# FVGame

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: lopatka5.mbin  shaderConfig.json  sphere6.mbin
assets/models/: Bone5.mbin  sphere3.mbin  sphere5.mbin
assets/shaders/: default.frag  default.vert  voxel.frag  voxel.geom  voxel.vert
src/: GameFramework.h  MainWindow.cpp  MainWindow.h  OpenglErrorHandle.h  main.cpp
src/GameFramework/: BaseObject.cpp  BaseObject.h  Camera.cpp  Camera.h  DrawableObject.cpp  DrawableObject.h  InputHandler.cpp  InputHandler.h  PhysicsObject.cpp  PhysicsObject.h  Scene.cpp  Scene.h
src/GameFramework/Input/: InputHandler.cpp  InputHandler.h  InputSwitch.cpp  InputSwitch.h
src/Graphics/: BaseObject.cpp  BaseObject.h  Camera.cpp  Camera.h  DrawableObject.cpp  DrawableObject.h  ErrorHandle.h  OpenglDrawable.cpp  OpenglDrawable.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderStorage.cpp  ShaderStorage.h  ShadersLayout.cpp  ShadersLayout.h  Transform.cpp  Transform.h
src/Utils/: Files.cpp  Files.h  ModelLoader.cpp  ModelLoader.h  ShaderLoader.cpp  ShaderLoader.h
